<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnCompartir"
        android:icon="@drawable/ic_share"
        android:title="@string/compartir"
        android:iconTint="@color/acento_azul"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnActualizar"
        android:icon="@drawable/ic_refresh"
        android:title="@string/actualizar"
        android:iconTint="@color/acento_azul"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnPegarLink"
        android:icon="@drawable/ic_link"
        android:title="@string/pegar_link"
        android:iconTint="@color/acento_azul"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnCargar"
        android:icon="@drawable/ic_upload"
        android:title="@string/cargar"
        android:iconTint="@color/acento_azul"
        app:showAsAction="ifRoom" />
</menu>
